reload time, solve mission overflow bug

--- a/app/styles/mission.scss
+++ b/app/styles/mission.scss
@@ -28,3 +28,9 @@ $mainColor: #C2003F;
   padding-bottom: 15px;
   border-left: 1px solid $mainColor;
 }
+
+.mission_content{
+  min-height:400px;
+  /*height:400px;*/
+ /* border-bottom:5px solid #C2003F;*/ 
+}
